<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="#ffdfdfdf"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue"
        android:text="@string/name_certification"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:gravity="center"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/name"
                        android:layout_marginRight="25dp"
                        android:textColor="@color/text_black"/>

                    <EditText
                        android:id="@+id/name_et"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:hint="@string/name_hint"
                        android:textColor="@color/text_gray"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/id_card_no"
                        android:layout_marginRight="25dp"
                        android:textColor="@color/text_black"/>

                    <EditText
                        android:id="@+id/card_no_et"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/text_gray"
                        android:hint="@string/card_no_hint"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/id_card_date"
                        android:layout_marginRight="25dp"
                        android:textColor="@color/text_black"/>

                    <EditText
                        android:id="@+id/card_date_et"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/text_gray"
                        android:hint="@string/id_card_date_hint"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/id_card_organ"
                        android:layout_marginRight="25dp"
                        android:textColor="@color/text_black"/>

                    <EditText
                        android:id="@+id/card_organ_et"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/text_gray"
                        android:hint="@string/id_card_organ_hint"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_gray"/>

            </LinearLayout>

            <com.example.admin.fastpay.view.UpLoadView
                android:id="@+id/half_ulv"
                android:layout_width="200dp"
                android:layout_height="125dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerInside"
                app:text="@string/half_photo"
                android:background="@color/white"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <com.example.admin.fastpay.view.UpLoadView
                    android:id="@+id/front_ulv"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    app:text="@string/front_photo"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:layout_marginRight="20dp">

                </com.example.admin.fastpay.view.UpLoadView>

                <com.example.admin.fastpay.view.UpLoadView
                    android:id="@+id/back_ulv"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    app:text="@string/back_photo"
                    android:background="@color/white"
                    android:layout_height="match_parent">

                </com.example.admin.fastpay.view.UpLoadView>

            </LinearLayout>

            <com.zhaoxing.view.sharpview.SharpTextView
                android:id="@+id/clear"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:text="清空图片"
                android:gravity="center"
                app:backgroundColor="@color/blue"
                app:radius="3dp"/>

            <com.zxz.www.base.view.corner.ProgressButton
                android:id="@+id/ok_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:enable_bg_color="@color/blue"
                app:radius="3dp"
                app:text="@string/ok"
                app:text_size="15sp"
                app:text_color="@color/white"
                app:progress_position="middle"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

    </ScrollView>



</LinearLayout>